/*
 * This file was generated by the Gradle 'init' task.
 *
 * This generated file contains a sample Java application project to get you started.
 * For more details on building Java & JVM projects, please refer to https://docs.gradle.org/8.13/userguide/building_java_projects.html in the Gradle documentation.
 */

plugins {
    // Apply the application plugin to add support for building a CLI application in Java.
    id 'application'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

dependencies {
    // Use JUnit test framework.
    testImplementation libs.junit

    // This dependency is used by the application.
    implementation libs.guava

    implementation 'org.codehaus.groovy:groovy-all:3.0.9'
    implementation 'cglib:cglib:3.3.0'
    implementation 'org.ow2.asm:asm:9.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    implementation 'com.google.guava:guava:30.1-jre'

}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

application {
    // Define the main class for the application.
    mainClass = 'org.example.App'
}

run {
    if (project.hasProperty('mainClass')) {
        doFirst {
            jvmArgs = ['--illegal-access=permit', '--add-opens', 'java.base/java.lang=ALL-UNNAMED']
        }
    }
}
